--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,6 +7,7 @@
 
 @import url(./components/assistant.css);
 @import url(./components/ico.css);
+@import url(./components/modal.css);
 
 @import url(./pages/legacy.css);
 @import url(./pages/404.css);
