--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,8 @@
 @import url(./components/ico.css);
 @import url(./components/modal.css);
 
+@import url(./components/ui/dialogs/categoryDialogs.css);
+
 @import url(./pages/legacy.css);
 @import url(./pages/404.css);
 @import url(./pages/index.css);
