--- a/src/css/layout/nav.css
+++ b/src/css/layout/nav.css
@@ -42,4 +42,9 @@ nav {
         flex-direction: row;
         align-items: center;
     }
+    .nav_left {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 }
